[package]
name = "rust-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "impl-default",
    "fileapi",
    "guiddef",
    "handleapi",
    "memoryapi",
    "std",
    "winbase",
    "tlhelp32",
    "errhandlingapi","psapi"
] }

iced-x86 = { version = "1.17.0", features = [
    "code_asm",
] }

